--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Stencil Component Starter</title>
-
-    <script type="module" src="/build/health-care.esm.js"></script>
-    <script nomodule src="/build/health-care.js"></script>
-    <link rel="stylesheet" href="/assets/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/fa-5.15.3-web/css/all.css">
-    <link rel="stylesheet" href="/build/health-care.css">
+    <!--<link rel="stylesheet" href="/assets/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+-->
+    <script type="module" src="/build/health-care.esm.js"></script>
+    <script nomodule src="/build/health-care.js"></script>
+
+    <link rel="stylesheet" href="/assets/fa-5.15.3-web/css/all.css">
+    <link rel="stylesheet" href="/build/health-care.css">
 
 </head>
 
